fix category being split into newline when window width is too small

--- a/main.css
+++ b/main.css
@@ -63,6 +63,7 @@ header, article, section, footer, footer > div,
 #categories label {
   margin: 0.25ex;
   padding: 0.5ex;
+  display: inline-block;
   cursor: pointer;
 
   border-radius: 0.5ex;
